Fixed bug in Code that would allow a client to modify the original list. Added tests to verify defensive copy in Code class